# desktop

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.oblivion  README.md  assemble-oblivion-os.sh  build-oblivion-os.sh  build-static-components.sh  build.sh  create-minimal-image.sh  create-oblivion-rootfs.sh  create-qemu-image.sh  demo.sh  diagnose-qemu.sh  fix-qemu.sh  launch-qemu.sh  manage-qemu-images.sh  oblivion-session.service  oblivion.desktop  run-dev-docker.sh  run-oblivion-os.sh  run-qemu-docker.sh  run-qemu-host.sh  run-qemu-with-image.sh  run.sh  setup-demo.sh  setup-vm.sh  test-gui.sh  test-linux-setup.sh  test-qemu.sh  test.sh
docs/: README.md  api-reference.md  development.md  examples.md  index.md  introduction.md  qemu-testing.md  setup.md  troubleshooting.md
oblivion-comp/: Cargo.toml
oblivion-comp/src/: main.rs
oblivion-panel/: Cargo.toml
oblivion-panel/src/: main.rs
oblivion-session/: Cargo.toml
oblivion-session/src/: main.rs
oblivion-shell/: Cargo.toml
oblivion-shell/src/: main.rs
src/: main.rs
