[workspace]
members = [
    "oblivion-shell",
    "oblivion-comp",
    "oblivion-panel",
    "oblivion-session",
]

[workspace.dependencies]
oblivion_ui = { git = "https://github.com/skygenesisenterprise/oblivion-sdk", branch = "main" }
smithay = "0.7.0"
wayland-server = "0.31"
wayland-client = "0.31"